<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="refrigerante_1_5l">Refrigerante 1,5L</string>
    <string name="bebidas">Bebidas:</string>
    <string name="r_25_00_exemplo">R$ 25,00</string>
    <string name="nome_produto">Pizza Calabresa</string>
    <string name="acompanhamentos">Acompanhamentos:</string>
    <string name="promocao">Promoção:</string>
    <string name="coca_cola">Coca-Cola</string>
    <string name="pepsi">Pepsi</string>
    <string name="guarana">Guaraná</string>
    <string name="fanta_uva">Fanta Uva</string>
    <string name="pizza">Pizza</string>
    <string name="hamburguer">Hambúrguer</string>
    <string name="categorias">Categorias</string>
    <string name="pagamento_realizado_com_sucesso">Pagamento realizado com sucesso</string>
    <string name="senha">Senha</string>
    <string name="clique_aqui">Clique Aqui</string>
    <string name="ainda_n_o_possui_cadastro">Ainda não possui cadastro?</string>
    <string name="delivery_app">Delivery App</string>
    <string name="email">Email</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cadastro">Cadastro</string>
    <string name="tradicional">Tradicional</string>
    <string name="doce">Doce</string>
    <string name="_1">1</string>
    <string name="valor_total">Valor total</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="preferencias">Remover algum acompanhamento...</string>
    <string name="r_25_00">R$ 25,00</string>
    <string name="prefer_ncias">Preferências:</string>
    <string name="processando_seu_pedido">Processando seu pedido...</string>
    <string name="valor_pedido">Valor Pedido:</string>
    <string name="taxa_entrega">Taxa Entrega:</string>
    <string name="valor">valor</string>
    <string name="gr_tis">Grátis</string>
    <string name="formas_de_pagamento">Formas de Pagamento</string>
    <string name="resumo">Resumo</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total:</string>
    <string name="r_35_00">R$ 35,00</string>
    <string name="cart_o_de_cr_dito">Cartão de Crédito</string>
    <string name="cart_o_de_d_bito">Cartão de Débito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="localiza_o_atual">Localização Atual</string>
    <string name="r_in_cio_higino_600">R. Inácio Higino, 600</string>
    <string name="la_bella_npizzaria">La Bella\nPizzaria</string>
    <string name="ainda_n_o_possui_uma_conta">Ainda não possui uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="rua_henrique_moscoso_210_praia_da_costa_vila_velha">Rua Henrique Moscoso, 210 - Praia da Costa, Vila Velha</string>
    <string name="fa_a_j_o_seu_pedido">Faça já o seu pedido!</string>
    <string name="pizza_tradicional">Pizza Tradicional</string>
</resources>