<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginPage"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagem_ze_entrada"
        android:layout_width="140dp"
        android:scaleType="fitXY"
        android:layout_height="140dp"/>


    <TextView
        android:id="@+id/text_cadastrar"
        style="@style/Big_Text_Home_Page"
        android:textSize="22sp"
        android:layout_marginTop="170dp"
        android:text="La Bella\nPizzaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Medium_Text_Login_Page"
        android:layout_marginStart="0dp"
        android:textSize="10sp"
        android:text="@string/delivery_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_cadastrar" />

    <TextView
        android:id="@+id/textView_form_email"
        style="@style/Medium_Text_Login_Page"
        android:layout_marginTop="270dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_email"
        style="@style/Custom_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_form_email">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_senha"
        style="@style/Medium_Text_Login_Page"
        android:layout_marginTop="20dp"
        android:text="@string/senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_senha"
        style="@style/Custom_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_senha">

    <com.google.android.material.textfield.TextInputEditText
        android:maxLines="1"
        android:id="@+id/edit_text_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text" />
</com.google.android.material.textfield.TextInputLayout>


<androidx.appcompat.widget.AppCompatButton
style="@style/Button_Login_Page"
android:background="@drawable/button_shape"
android:id="@+id/button_login"
android:text="@string/login"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/layout_edit_senha" />

<androidx.appcompat.widget.LinearLayoutCompat
style="@style/Button_Login_Page"
android:background="@drawable/button_shape"
android:backgroundTint="@color/dark_green"
android:id="@+id/container_progressBar"
android:visibility="gone"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/layout_edit_senha">

<ProgressBar
    style="@style/Custom_ProgressBar"
    android:id="@+id/progressBar" />
</androidx.appcompat.widget.LinearLayoutCompat><LinearLayout
style="@style/Container_Cadastrar_Login_Page"
android:id="@+id/linear_to_cadastro"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/button_login">
<TextView
    style="@style/Medium_Text_Login_Page"
    android:layout_marginStart="0dp"
    android:text="@string/ainda_n_o_possui_cadastro"

    />

<TextView
    style="@style/Medium_Text_Login_Page"
    android:id="@+id/text_to_cadastro_page"
    android:layout_marginStart="5dp"
    android:text="@string/cadastrar"
    android:textColor="@color/dark_red" />
</LinearLayout>

    <TextView
        android:textSize="10sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Rua Henrique Moscoso, 210 - Praia da Costa, Vila Velha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>