<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".activities.DetalhesPage">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_img_produto"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_produto"
            android:layout_width="300dp"
            android:layout_height="280dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:background="@drawable/container_detalhes_page"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear_img_produto">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/nome_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:text="@string/nome_produto"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_valor_quantidade">

            <TextView
                android:id="@+id/text_valor_fixo"

                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:text="@string/r_25_00_exemplo"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_quantidade"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/button_remover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_remove" />

                <TextView
                    android:id="@+id/txt_quantidade"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_text_quantidade"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/button_adicionar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/font_media_bold_detalhes_page"
                android:textColor="@color/black"
                android:text="@string/acompanhamentos" />

            <TextView
                android:id="@+id/detalhe_produto"
                style="@style/font_media_light"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/font_media_bold_detalhes_page"
                android:textColor="@color/black"
                android:text="@string/promocao" />

            <TextView
                style="@style/font_media_light"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/refrigerante_1_5l" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            style="@style/font_media_bold_detalhes_page"
            android:textColor="@color/black"
            android:text="@string/bebidas" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <RadioButton
                style="@style/font_media_light"
                android:layout_weight="1"
                android:text="@string/coca_cola" />

            <RadioButton
                style="@style/font_media_light"
                android:layout_weight="1"
                android:text="@string/pepsi" />

            <RadioButton
                style="@style/font_media_light"
                android:layout_weight="1"
                android:text="@string/guarana" />

            <RadioButton
                style="@style/font_media_light"
                android:layout_weight="1"
                android:text="@string/fanta_uva" />
        </RadioGroup>
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="Preferências:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edit_text_normal"
            android:layout_marginHorizontal="20dp"
            android:textSize="14sp"
            android:hint="Remover algum acompanhamento..."
            android:padding="15dp"
            android:maxLines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/light_grey"
            android:layout_width="160dp"
            android:layout_height="80dp">
            <TextView
                style="@style/font_media_light"
                android:textStyle="bold"
                android:text="Valor total"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/text_valor_total"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:text="R$ 50,00"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_to_pagamento_page"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/dark_red"
            android:layout_width="160dp"
            android:layout_height="80dp">
            <TextView
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="Finalizar Compra"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:id="@+id/arrow_back_home_page"
        android:src="@drawable/ic_arrow_back"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>