<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginPage">

    <ImageView
        android:id="@+id/ic_retornar_login"
        style="@style/ic_cadastro_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/text_cadastrar"
        style="@style/Big_Text_Cadastro_Page"
        android:text="@string/cadastro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        style="@style/Medium_Text_Cadastro_Page"
        android:id="@+id/textView_nome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="180dp"
        android:text="@string/nome_completo"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Custom_EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_nome"
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_email"
        style="@style/Medium_Text_Cadastro_Page"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/email"

        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Custom_EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_email"
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        style="@style/Medium_Text_Cadastro_Page"
        android:id="@+id/text_senha"
        android:text="@string/senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Custom_EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_senha"
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastrar"
        style="@style/Button_Cadastro_Page"
        android:text="@string/cadastrar"
        android:background="@drawable/button_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_progressBar"
        style="@style/Button_Cadastro_Page"
        android:backgroundTint="@color/black"
        android:visibility="gone"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Custom_ProgressBar" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>