<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomePage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/linear_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/custom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="casual"
                    android:text="R. Inácio Higino, 600"
                    android:textColor="@color/light_orange"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        style="@style/Medium_Text_Home_Page"
        android:layout_marginTop="50dp"
        android:text="Promoção do dia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_app_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_promocao"
        style="@style/MaterialCard_Promocao_Home_Page"
        android:background="@drawable/background_image_home_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_app_bar">

        <ImageView
            style="@style/ImageView_Promocao_Home_Page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/Text_Promocao_Home_Page"
            android:layout_width="100dp"
            android:background="@drawable/bg_promocao"
            android:text="Pizza\n+\nRefrigerante 1,5L"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_categorias"
        style="@style/Medium_Text_Home_Page"
        android:text="@string/categorias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_promocao" />

    <LinearLayout
        android:id="@+id/linear_categorias"
        style="@style/Container_Categorias_Home_Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_categorias">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/MaterialCard_pizza"
            style="@style/MaterialCard_Categorias_Home_Page">
            <ImageView
                style="@style/ImageView_Categoria_Home_Page"
                android:src="@drawable/imagem_pizza_calabresa" />
            <TextView
                style="@style/Small_Text_Home_Page"
                android:text="@string/tradicional" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/MaterialCardPizzaDoce"
            style="@style/MaterialCard_Categorias_Home_Page">
            <ImageView
                style="@style/ImageView_Categoria_Home_Page"
                android:src="@drawable/imagem_pizza_chocolate_preto_e_branco" />

            <TextView
                style="@style/Small_Text_Home_Page"
                android:text="@string/doce" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_categoria_selecionada"
        style="@style/Medium_Text_Home_Page"
        android:text="@string/pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_categorias" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        style="@style/RecyclerView_Home_Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_categoria_selecionada" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_ic_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_home_selected"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_home_selected" />

            <ImageView
                android:id="@+id/ic_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_home"
                android:visibility="gone" />


            <TextView
                android:id="@+id/text_icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Home"
                android:textColor="@color/dark_red"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_ic_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ic_search_selected"
                android:visibility="gone"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_search_selected" />
            <ImageView
                android:id="@+id/ic_search"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_search_on" />

            <TextView
                android:id="@+id/text_icon_buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:text="Buscar"
                android:textColor="@color/light_black"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_ic_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ic_settings_selected"
                android:visibility="gone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_settings_selected" />

            <ImageView
                android:id="@+id/ic_settings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/text_icon_configuracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Configurações"
                android:textColor="@color/light_black"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

